test/libsolidity/syntaxTests/tryCatch/low_level_with_wrong_type.sol
contract C {
    function f() public returns (uint, uint) {
        try this.f() {

        } catch (uint) {
        }
    }
}
// ====
// EVMVersion: >=byzantium
// ----
// TypeError 6231: (94-118='catch (uint) {         }'): Expected `catch (bytes memory ...) { ... }` or `catch { ... }`.
